@@ -1,0 +1,77 @@
+package com.alibaba.citrus.service.form.impl;
+
+import static com.alibaba.citrus.service.requestcontext.util.RequestContextUtil.*;
+import static com.alibaba.citrus.util.CollectionUtil.*;
+
+import java.util.Map;
+
+import javax.servlet.http.HttpServletRequest;
+
+import com.alibaba.citrus.service.requestcontext.parser.ParserRequestContext;
+
+final class FormParameters {
+    private final Map<String, FormParameter> params = createHashMap();
+    private final HttpServletRequest request;
+    private final ParserRequestContext prc;
+
+    public FormParameters(HttpServletRequest request) {
+        this.request = request;
+        this.prc = findRequestContext(request, ParserRequestContext.class);
+    }
+
+    public void addFormParameter(FormParameter param) {
+        params.put(param.normalizedKey, param);
+    }
+
+    public FormParameter getFormParameter(String normalizedKey) {
+        return params.get(normalizedKey);
+    }
+
+    public Object[] getValues(String normalizedKey) {
+        FormParameter param = params.get(normalizedKey);
+
+        if (param == null) {
+            return null;
+        } else if (prc != null) {
+            // 假如配置了ParserRequestContext，则取得objects，以便支持FileItem，否则只支持字符串值。
+            return prc.getParameters().getObjects(param.originalKey);
+        } else {
+            return request.getParameterValues(param.originalKey);
+        }
+    }
+
+    public String getStringValue(String normalizedKey) {
+        FormParameter param = params.get(normalizedKey);
+
+        if (param == null) {
+            return null;
+        } else if (prc != null) {
+            // 假如配置了ParserRequestContext，则取得objects，以便支持FileItem，否则只支持字符串值。
+            return prc.getParameters().getString(param.originalKey);
+        } else {
+            return request.getParameter(param.originalKey);
+        }
+    }
+
+    /**
+     * 代表一个表单参数的信息。
+     */
+    final static class FormParameter {
+        public final String groupKey;
+        public final String fieldKey;
+        public final String instanceKey;
+        public final String additionalInfo;
+        public final String originalKey;
+        public final String normalizedKey;
+
+        FormParameter(String groupKey, String fieldKey, String instanceKey, String additionalInfo, String originalKey,
+                      String normalizedKey) {
+            this.groupKey = groupKey;
+            this.fieldKey = fieldKey;
+            this.instanceKey = instanceKey;
+            this.additionalInfo = additionalInfo;
+            this.originalKey = originalKey;
+            this.normalizedKey = normalizedKey;
+        }
+    }
+}
