@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <beans:beans xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xmlns="http://www.alibaba.com/schema/services"
-    xmlns:pull-tools="http://www.alibaba.com/schema/services/pull/factories"
+    xmlns="http://www.alibaba.com/schema/services" xmlns:pull-tools="http://www.alibaba.com/schema/services/pull/factories"
     xmlns:validators="http://www.alibaba.com/schema/services/form/validators"
-    xmlns:beans="http://www.springframework.org/schema/beans"
-    xmlns:p="http://www.springframework.org/schema/p"
+    xmlns:beans="http://www.springframework.org/schema/beans" xmlns:p="http://www.springframework.org/schema/p"
     xsi:schemaLocation="http://www.alibaba.com/schema/services http://localhost:8080/schema/services.xsd
         http://www.alibaba.com/schema/services/pull/factories http://localhost:8080/schema/services-pull-factories.xsd
         http://www.alibaba.com/schema/services/form/validators http://localhost:8080/schema/services-form-validators.xsd
@@ -23,22 +21,28 @@
         <group name="group1">
             <field name="field1" defaultValue="default1" displayName="我的字段1"
                 propertyName="property1">
-                <validators:required-validator message="required ${displayName}" />
+                <validators:required-validator
+                    message="required ${displayName}" />
             </field>
             <field name="field2">
-                <validators:required-validator message="required ${displayName}" />
+                <validators:required-validator
+                    message="required ${displayName}" />
             </field>
         </group>
         <group name="group2" extends="group1" postOnly="true" />
         <group name="group3" trimmingByDefault="false">
-            <field name="field1" defaultValue="default1,default2, default3" displayName="我的字段1"
-                propertyName="property1">
-                <validators:required-validator message="required ${displayName}" />
+            <field name="field1" defaultValue="default1,default2, default3"
+                displayName="我的字段1" propertyName="property1">
+                <validators:required-validator
+                    message="required ${displayName}" />
             </field>
             <field name="field2">
-                <validators:custom-error id="err1" message="hello, world" />
-                <validators:custom-error id="err2" message="hello, world2" />
-                <validators:custom-error id="err3" message="hello, ${world}" />
+                <validators:custom-error id="err1"
+                    message="hello, world" />
+                <validators:custom-error id="err2"
+                    message="hello, world2" />
+                <validators:custom-error id="err3"
+                    message="hello, ${world}" />
                 <validators:validator p:id="err4"
                     class="com.alibaba.citrus.service.form.impl.validation.NoMessageValidator" />
             </field>
@@ -49,7 +53,8 @@
         <group name="group1">
             <field name="field1" defaultValue="default1" displayName="我的字段1"
                 propertyName="property1">
-                <validators:required-validator message="required ${displayName}" />
+                <validators:required-validator
+                    message="required ${displayName}" />
                 <validators:validator
                     class="com.alibaba.citrus.service.form.impl.validation.MultiFieldsValidator"
                     p:message="invalid">
@@ -62,7 +67,8 @@
                 </validators:validator>
             </field>
             <field name="field2">
-                <validators:required-validator message="required ${displayName}" />
+                <validators:required-validator
+                    message="required ${displayName}" />
             </field>
         </group>
     </form>
@@ -76,6 +82,20 @@
     <form id="form4" converterQuiet="false">
         <group name="group1">
             <field name="field1" propertyName="property1" />
+        </group>
+    </form>
+
+    <form id="form5" fieldKeyFormat="uncompressed">
+        <group name="group1">
+            <field name="field1" defaultValue="default1" displayName="我的字段1"
+                propertyName="property1">
+                <validators:required-validator
+                    message="required ${displayName}" />
+            </field>
+            <field name="field2">
+                <validators:required-validator
+                    message="required ${displayName}" />
+            </field>
         </group>
     </form>
 
